Element alignment corrections:Sunayna Parsediya

--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -11,14 +11,16 @@
 
   .ImageClass {
     display: none;
-    position: relative;
+    position: absolute;
+    left: 0;
     display: inline-block;
-    max-width: 480px;
+    /* max-width: 480px; */
     margin: auto;
-    width: 400px;
-    min-width: 320px;
+    width: 100%;
+    /* min-width: 320px; */
   text-align: center;
   color: white;
+
 
   }
 
